# chaos-sensei

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README-2.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
chaos_sensei/: __init__.py  cli.py
chaos_sensei/core/: __init__.py  config.py  engine.py  events.py  exceptions.py  planner.py  policy.py  report.py  rollback.py  session.py  state.py
chaos_sensei/providers/: __init__.py  base.py
chaos_sensei/providers/kubernetes/: __init__.py  provider.py
chaos_sensei/providers/kubernetes/scenarios/: service_selector_mismatch.yaml
chaos_sensei/tools/: __init__.py  kubectl.py
docs/: ROADMAP-1.html  ROADMAP-1.md  architecture.md  getting-started.md  safety-model.md
tests/: __init__.py  test_config.py
tests/integration/: test_full_flow.py
tests/unit/: test_policy.py  test_session.py  test_state.py
