[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-sensei"
version = "0.1.0"
description = "Repo-aware chaos engineering and incident training agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Chaos Sensei Contributors" }
]
keywords = [
  "chaos-engineering",
  "sre",
  "devops",
  "kubernetes",
  "terraform",
  "incident-response",
  "incident-training",
  "ai-agent"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "typer[all]>=0.9.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "jinja2>=3.1.0",
  "networkx>=3.0",
  "gitpython>=3.1.0",
  "python-dotenv>=1.0.0",
  "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "black>=23.0.0",
  "isort>=5.12.0",
]
kubernetes = [
  "kubernetes>=28.0.0",
]
all = [
  "chaos-sensei[dev,kubernetes]",
]

[project.urls]
Homepage = "https://github.com/chaos-sensei/chaos-sensei"
Documentation = "https://github.com/chaos-sensei/chaos-sensei#readme"
Repository = "https://github.com/chaos-sensei/chaos-sensei.git"
Issues = "https://github.com/chaos-sensei/chaos-sensei/issues"

[project.scripts]
chaos-sensei = "chaos_sensei.cli:app"

[tool.setuptools]
packages = ["chaos_sensei"]

[tool.setuptools.package-dir]
chaos_sensei = "chaos_sensei"

[tool.setuptools.package-data]
chaos_sensei = [
  "data/*.yaml",
  "templates/*.j2",
  "py.typed",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "C",      # flake8-comprehensions
  "B",      # flake8-bugbear
  "UP",     # pyupgrade
  "ARG",    # flake8-unused-arguments
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long
  "B008",   # function call in default argument
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=chaos_sensei --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["chaos_sensei"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.isort]
profile = "black"
line_length = 100
